@@ -1,8 +1,16 @@
+1998-06-17  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
+
+	* lisp/pop3-fma.el: Add about password document in README-ja.pop3
+	Small bug fix.
+	
+	* lisp/pop3-fma.el: Delete variable pop3-fma-cypher-key
+	Use base64-encode-string , base64-decode-string instead. 
+	Both change by Yasuo OKABE <okabe@kuis.kyoto-u.ac.jp>
+
 1998-06-13  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
 
 	* lisp/pop3-fma.el: New function pop3-fma-cypher-string
 	 New variable pop3-fma-cypher-key
-	 Both change by Yasuo OKABE <okabe@kuis.kyoto-u.ac.jp>
 
 1998-06-07  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
